# ime

./: CMakeLists.txt  README.md  build_msvc14.bat
doc/: CMakeLists.txt  LL_PRTPinyin-快速输入解决方案_潘荣涛_2014-9-03.pptx  LL_基于C++的拼音输入法设计与实现_潘荣涛_2014-5-7.docx
etc/: CMakeLists.txt  edic.db  ime.stroke.db  wubi.db
etc/hwr/: HCI_AUTH  HCI_USER_INFO
examples/: CMakeLists.txt
examples/test-associate/: CMakeLists.txt  TestAssociate.cpp  TestAssociate.h  main.cpp
examples/test-edic/: CMakeLists.txt  TestEdic.cpp  TestEdic.h  main.cpp
examples/test-hwr/: CMakeLists.txt  TestHwr.cpp  TestHwr.h  main.cpp
examples/test-pinyin/: CMakeLists.txt  TestPinyin.cpp  TestPinyin.h  main.cpp
examples/test-share/: Encoding.cpp  Input.cpp  Input.h
examples/test-stroke/: CMakeLists.txt  TestStroke.cpp  TestStroke.h  main.cpp
examples/test-wubi/: CMakeLists.txt  TestWubi.cpp  TestWubi.h  main.cpp
include/: CMakeLists.txt
include/associate/: Associate.h
include/edic/: Edic.h
include/hwr/: hwr.h
include/pinyin/: Pinyin.h
include/stroke/: Stroke.h
include/wubi/: Wubi.h
src/: CMakeLists.txt
src/associate/: Associate.cpp  Associate_Internal.cpp  Associate_Internal.h  CMakeLists.txt  Database.cpp  Database.h
src/edic/: CMakeLists.txt  Database.cpp  Database.h  Edic.cpp  Edic_Internal.cpp  Edic_Internal.h
src/hwr/: CMakeLists.txt  Hwr.cpp  Hwr_Internal.cpp  Hwr_Internal.h
src/pinyin/: CMakeLists.txt  CandidateStubs.cpp  Pinyin.cpp
src/stroke/: CMakeLists.txt  Database.cpp  Database.h  Stroke.cpp  Stroke_Internal.cpp  Stroke_Internal.h
src/wubi/: CMakeLists.txt  Database.cpp  Database.h  Wubi.cpp  Wubi_Internal.cpp  Wubi_Internal.h
